--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
-    "@babel/preset-env": "^7.7.1"
+    "@babel/preset-env": "^7.7.1",
+    "readline-sync": "^1.4.10"
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
