--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
