--- a/package.json
+++ b/package.json
@@ -29,11 +29,7 @@
     "readline-sync": "^1.4.10"
   },
   "bin": {
-    "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-even.js",
-    "brain-progression": "dist/bin/brain-progression.js",
-    "brain-prime": "dist/bin/brain-prime.js"
+    "brain-games": "dist/bin/brain-games.js"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
