--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/tkalmykova/frontend-project-lvl1/issues"
   },
   "homepage": "https://github.com/tkalmykova/frontend-project-lvl1#readme",
-  "description": "",
+  "description": "a set of small console games",
+  "keywords": ["brain", "game"],
   "dependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
