--- a/package.json
+++ b/package.json
@@ -21,16 +21,24 @@
   },
   "homepage": "https://github.com/tkalmykova/frontend-project-lvl1#readme",
   "description": "a set of small console games",
-  "keywords": ["brain", "game"],
+  "keywords": [
+    "brain",
+    "game"
+  ],
   "dependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "@hexlet/pairs": "^1.0.10",
     "readline-sync": "^1.4.10"
   },
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-prime": "dist/bin/brain-prime.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
